Adding meta for UTF-8 in index.html and a bit more proper instructions to the README

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
-<head><title>techwithoutborders.org</title></head>
+<head>
+<title>techwithoutborders.org</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+</head>
 
 <body>
 
