--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <br><br><br>D R A F T -- 1 9 - D E C E M B E R - 2 0 1 0<br><br>
 
-<a href="/"><img src="http://scripting.com/images/2010/12/19/twobs.gif" width="766" height="72" border="0" alt="techWIthoutBorders.org"></a>
+<a href="/"><img src="http://scripting.com/images/2010/12/19/twobs.gif" width="766" height="72" border="0" alt="techWithoutBorders.org"></a>
 
 <br><br><br>
 
@@ -29,7 +29,7 @@
 
 <li> We urge the US Government to abide by its Constitution and defend the First Amendment, and deal with both WikiLeaks and the journalists in the same manner. In other words, treat news the same whether it originates in print or online.<br /><br />
 
-<lI> We apply these principles in our work and they are embodied in our technology.<br /><br />
+<li> We apply these principles in our work and they are embodied in our technology.<br /><br />
 
 </ol>
 
