better date formatting, other minor changes

--- a/index.ja.html
+++ b/index.ja.html
@@ -9,7 +9,7 @@
 
 <center>
 
-<br><br><br>草 案 -- 2 0 1 0 年 - 1 2 月 - 1 9 日<br><br>
+<br><br><br>2 0 1 0 年 . 1 2 月 . 1 9 日 -- 草 案<br><br>
 
 <a href="/"><img src="http://scripting.com/images/2010/12/19/twobs.gif" width="766" height="72" border="0" alt="techWithoutBorders.org"></a>
 
@@ -45,7 +45,7 @@
 もしこれらの考え方に賛成であれば、<i>ぜひ他の人に聞こえる・聞いてくれる場所でそのことを表現してください。</i> 
 大体同意する、それとも自分なら別の言い方をする、といった場合は、テキストをコピーして好きなように編集し、オリジナルの文章へのリンクを追加してください。クリエイティブ・コモンズライセンスはそのために付いています。
 
-何かあれば<a href="http://groups.google.com/group/tech-without-borders">tech-without-borders</a>グループで話し合いましょう。
+何かあれば<a href="http://groups.google.com/group/tech-without-borders">tech-without-borders</a>メーリングリストで話し合いましょう。
 </font>
 
 </td></tr></table>
